--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Chess</string>
     <string name="my_button_text" />
+    <string name="white_moves">White moves</string>
+    <string name="show_reachable_squares">Show reachable squares</string>
 </resources>
