--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     Andrea Ronga,\n
     Fabrizio De Marco
     </string>
+    <string name="action_undo">Undo</string>
+    <string name="action_redo">Redo</string>
 </resources>
